test: write a test for getbooklists viewmodel